--- a/Notebook_OrjuelaJavier.ipynb
+++ b/Notebook_OrjuelaJavier.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "#Leer la base de datos\n",
-    "file = \"C:/Users/AdministradorPrim/Desktop/javascript-curso/data_01.txt\"\n",
+    "file = \"data_01.txt\"\n",
     "data=pd.read_csv(file,sep='\\t')"
    ]
   },
